--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass": "^1.77.8",
     "sass-loader": "^12.6.0",
     "scss": "^0.2.4",
+    "use-sound": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
