--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/user-event": "^13.5.0",
-    "immer": "^9.0.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/user-event": "13.5.0",
+    "immer": "9.0.21",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.77.8",
-    "sass-loader": "^12.6.0",
-    "scss": "^0.2.4",
-    "use-sound": "^4.0.3",
-    "web-vitals": "^2.1.4"
+    "sass": "1.77.8",
+    "sass-loader": "12.6.0",
+    "scss": "0.2.4",
+    "use-sound": "4.0.3",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.3.1",
-    "@testing-library/react": "^16.0.0"
+    "@testing-library/dom": "10.3.1",
+    "@testing-library/react": "16.0.0"
   }
 }
