--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "use-sound": "4.0.3",
     "web-vitals": "2.1.4"
   },
+  "homepage": "https://ericpengJoJo.github.io/the-game-of-life",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "10.3.1",
-    "@testing-library/react": "16.0.0"
+    "@testing-library/react": "16.0.0",
+    "gh-pages": "^6.1.1"
   }
 }
