--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "web-vitals": "2.1.4"
   },
   "engines": {
-    "node": "20.15.0"
+    "node": "20.15.0",
+    "npm": "7.13.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
